SERVER-65455 Constructed ReplSetConfig should always construct the recipientConfig